# Oxidized_Bio

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  crush.md  docker-compose.worker.yml  docker-compose.yml
BioAgents/client/src/: index.jsx
BioAgents/client/src/components/: Header.jsx
BioAgents/client/src/hooks/: index.ts  useSettings.ts
BioAgents/client/src/pages/: SettingsPage.tsx  index.ts
docker/: entrypoint.sh  setup-ssh.sh  sshd_config  supervisord.conf
docs/: FILE_PATH_FIX.md  PROJECT_README.md  TROUBLESHOOTING_UPLOAD.md  UPLOAD_PROMPT_FIX.md  activity.md
migrations/: 20240101000000_initial_schema.sql
src/: config.rs  data_registry.rs  lib.rs  main.rs  models.rs  types.rs
src/agents/: analysis.rs  file_upload.rs  hypothesis.rs  literature.rs  mod.rs  planning.rs  reflection.rs  reply.rs
src/analysis/: mod.rs
src/db/: mod.rs  operations.rs  pool.rs
src/embeddings/: document_processor.rs  mod.rs  text_chunker.rs  vector_search.rs
src/llm/: anthropic.rs  glm.rs  google.rs  groq.rs  mod.rs  openai.rs  openrouter.rs  provider.rs  types.rs
src/middleware/: auth.rs  cors.rs  mod.rs  rate_limiter.rs
src/payment/: b402.rs  mod.rs  x402.rs
src/queue/: jobs.rs  mod.rs  workers.rs
src/rfc/: crypto.rs  exchange.rs  mod.rs  shell.rs
src/routes/: analysis.rs  chat.rs  deep_research.rs  files.rs  health.rs  mod.rs  static_files.rs  ui.rs
src/search/: mod.rs  serpapi.rs
src/settings/: mod.rs  routes.rs  storage.rs
src/storage/: mod.rs  s3_client.rs
src/tui/: app.rs  event.rs  mod.rs  theme.rs  ui.rs
src/tui/widgets/: mod.rs  progress.rs  settings.rs
src/utils/: logger.rs  mod.rs  retry.rs
tasks/: todo.md
